# ocanren-perf

./: .avg  .gitignore  .gitmodules  Makefile  README.md  avg.awk  cpuinfo  script.gnuplot
ocanren01/: Quine_decls.ml  Quines_NoDiseq.ml  TimeHelper.ml  dune  dune-project  dune-workspace  test001_expo1.ml  test005_thrines.ml  test007_quines.ml  test008_appendo.ml
ocanren02/: .ocamlformat  Makefile  Quine_decls.ml  Quines_NoDiseq.ml  TimeHelper.ml  dune  test001_expo1.ml  test002_logo1.ml  test004_logo2.ml  test005_thrines.ml  test006_twines.ml  test007_quines.ml  test008_appendo.ml  test009_lookupo.ml  test011_quinesNoDiseq.ml  test600_order.ml  test777.ml  test800.ml  ulc_defs.ml
ocanren02/hacky_ppx/fresh/: dune  ppx_relation.ml
ocanren02/rewriters/: dune
ocanren03/: TimeHelper.ml  numero_decls.ml
racket/: Makefile  quines.rkt
src2/: Quine_decls.ml  Quines_NoDiseq.ml  TimeHelper.ml  dune  numero_decls.ml  test001_expo1.ml  test002_logo1.ml  test003_sort.ml  test008_appendo.ml
src2/rewriters/: dune
src_lisps/: .gitignore  Makefile  _test001_expo1.rkt  _test002_logo.rkt  _test003_sort.rkt  hack.scm  lengtho.chez.scm  list-display.scm  numbers.scm  q.rkt  q.scm  q_nodiseq.scm  test001_expo1.chez  test001_expo1.mu.scm  test001_pow.chez.scm  test002.chez  test002.chez.scm  test002.mu.scm  test002_log.chez.scm  test003.chez  test003.chez.scm  test003.mu.scm  test003_sort.rkt  test003_sorto.chez.scm  test004.chez  test004.mu.scm  test004_logo2.rkt  test005.rkt  test005_quines1.chez  test005_thrines.chez.scm  test005_thrines.simplechez.scm  test006.chez  test006.rkt  test006_twines.chez.scm  test007.chez  test007.chez.scm  test007.rkt  test007.simplechez.scm  test007_quines.chez.scm  test008_appendo.chez.scm  (+21 more)
src_ocanren01tagless/: .gitignore  .merlin  Makefile  Quine_decls.ml  Quines_NoDiseq.ml  TimeHelper.ml  _tags  numero_decls.ml  test001_expo1.ml  test002_logo1.ml  test003_sort.ml  test004_logo2.ml  test006_twines.ml  test007_quines.ml  test009_lookupo.ml  test011_quinesNoDiseq.ml  test900_trees.ml  test901_unif1.ml
src_ocanren02master/: .merlin  Quine_decls.ml  Quines_NoDiseq.ml  TimeHelper.ml  _tags  numero_decls.ml  test001_expo1.ml  test002_logo1.ml  test003_sort.ml  test008_appendo.ml  test010quines_tabled.ml  test011_quinesNoDiseq.ml  test900_trees.ml
src_ocanren03asm-workout12feb/: Quines_NoDiseq.ml  myocamlbuild.ml  test002_logo1.ml  test003_sort.ml  test007_quines.ml  test901_unif1.ml
src_ocanren03eucpp/: myocamlbuild.ml  test002_logo1.ml  test003_sort.ml  test004_logo2.ml  test010quines_tabled.ml  test011_quinesNoDiseq.ml
src_ocanren04O3/: Makefile  _tags  myocamlbuild.ml  src_ocanren02master  test001_expo1.ml
src_ocanren04unif_cps/: .gitignore  Quine_decls.ml  TimeHelper.ml  test006_twines.ml  test007_quines.ml
src_ocanren05fix-diseq-speed/: Makefile  _tags  test005_thrines.ml  test008_appendo.ml
src_ocanren06spacetime/: .gitignore  Quine_decls.ml  TimeHelper.ml  test003_sort.ml
src_ocanren10tagful/: .merlin  Quines_NoDiseq.ml  myocamlbuild.ml  test001_expo1.ml  test002_logo1.ml  test003_sort.ml  test004_logo2.ml  test005_thrines.ml  test006_twines.ml  test007_quines.ml
src_ocanren11cunif/: .merlin  Quines_NoDiseq.ml  numero_decls.ml
src_ocanren11no_opts/: Quine_decls.ml  Quines_NoDiseq.ml  _tags  numero_decls.ml  test005_thrines.ml  test007_quines.ml  test011_quinesNoDiseq.ml
src_ocanren12only-set-var-val/: numero_decls.ml  test011_quinesNoDiseq.ml
src_ocanren13only-fast-constraints/: TimeHelper.ml  test600_order.ml
src_ocanren1master/: Makefile  Quine_decls.ml  Quines_NoDiseq.ml  numero_decls.ml  test001_expo1.ml  test002_logo1.ml  test003_sort.ml  test005_thrines.ml  test006_twines.ml  test007_quines.ml  test008_appendo.ml  test009_lookupo.ml  test011_quinesNoDiseq.ml
src_ocanren1tagless/: Quines_NoDiseq.ml  myocamlbuild.ml  test001_expo1.ml  test002_logo1.ml  test003_sort.ml  test004_logo2.ml  test009_lookupo.ml  test900_trees.ml
src_ocanren2patTree/: Makefile
src_ocanren2tagful/: TimeHelper.ml  _tags  numero_decls.ml  test001_expo1.ml  test002_logo1.ml  test003_sort.ml  test004_logo2.ml  test005_thrines.ml  test006_twines.ml  test007_quines.ml  test009_lookupo.ml  test011_quinesNoDiseq.ml  test900_trees.ml
src_ocanren3MKstreams/: .merlin  Makefile  Quine_decls.ml  _tags  test001_expo1.ml  test008_appendo.ml  test600_order.ml  test900_trees.ml
src_ocanren3only-set-var-val/: Quine_decls.ml  test008_appendo.ml
src_ocanren4fastDiseq/: Makefile  test600_order.ml
src_ocanren4only-fast-constraints/: Makefile  numero_decls.ml  test002_logo1.ml  test005_thrines.ml  test008_appendo.ml  test900_trees.ml
src_ocanren5def_opt/: .merlin  Makefile  _tags  test002_logo1.ml  test003_sort.ml  test005_thrines.ml  test006_twines.ml  test007_quines.ml
src_ocanren5no-optimizations/: Quine_decls.ml  _tags
src_ocanren5set-var-val/: .merlin  Makefile  myocamlbuild.ml
src_ocanren6same-streams/: Makefile  Quine_decls.ml  _tags  numero_decls.ml  test001_expo1.ml  test005_thrines.ml  test006_twines.ml  test007_quines.ml  test600_order.ml  test601_order.ml  test603_order.ml  testXXX_evalo.ml
src_ocanren7more-inline/: .merlin  Makefile  Quine_decls.ml  _tags  numero_decls.ml  test001_expo1.ml  test002_logo1.ml  test005_thrines.ml  test006_twines.ml  test007_quines.ml  test009_lookupo.ml  test011_quinesNoDiseq.ml  test900_trees.ml  testXXX_evalo.ml
src_ocanren8dumb_and2opts/: Makefile  _tags  numero_decls.ml  test004_logo2.ml
src_ocanren9same-steams+2opts/: Makefile  Quine_decls.ml  Quines_NoDiseq.ml  TimeHelper.ml  _tags  myocamlbuild.ml  numero_decls.ml  test003_sort.ml  test004_logo2.ml  test006_twines.ml  test011_quinesNoDiseq.ml  testXXX_evalo.ml
src_ocanrendefault/: Makefile  _tags  myocamlbuild.ml  test003_sort.ml
src_ocanrenfancy/: .merlin  Makefile  Quine_decls.ml  _tags  numero_decls.ml  test001_expo1.ml  test002_logo1.ml  test003_sort.ml  test004_logo2.ml
src_ocanrenfancy3/: .merlin  Makefile  test002_logo1.ml  test003_sort.ml  test005_thrines.ml  test006_twines.ml
src_ocanrenfancy4/: .merlin  Makefile  measure.sh  (+7 more)
(+16 files in other folders)
