(env
 (_
  (flags
   (:standard -w -33-27-39 -rectypes))))

(library
 (name TimeHelper)
 (modules TimeHelper)
 (libraries mtime.clock.os OCanren)
 (preprocess
  (pps ppx_optcomp))
 (wrapped false))

(library
 (name Quine_decls)
 (modules Quine_decls)
 (libraries OCanren)
 (wrapped false)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   ;  ppx_fresh_hacky
   GTtogether)))

(library
 (name Quines_NoDiseq)
 (modules Quines_NoDiseq)
 (libraries OCanren)
 (wrapped false)
 (preprocess
  (pps
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   ;  ppx_fresh_hacky
   GTtogether)))

(library
 (name Numero_decls)
 (modules Numero_decls)
 (libraries OCanren OCanren.tester)
 (wrapped false)
 (flags
  (:standard -rectypes -w -27-39))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   ;  ppx_fresh_hacky
   GTtogether)))

(executables
 (names test001_expo1 test002_logo1 test003_sort test004_logo2)
 (public_names test001 test002 test003 test004)
 (modules test001_expo1 test002_logo1 test003_sort test004_logo2)
 (libraries OCanren OCanren.tester TimeHelper Numero_decls)
 (flags
  (:standard -rectypes))
 (preprocess
  (pps
   GT.ppx_all
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_fresh
   ;  ppx_fresh_hacky
   OCanren-ppx.ppx_repr
   --
   -no-delay-in-fresh
   ;
   ))
 ; (action
 ;  (run
 ;   %{project_root}/rewriters/pp5+gt+plugins+ocanren+dump.exe
 ;   %{input-file})))
 )

(library
 (kind ppx_rewriter)
 (name GTtogether)
 (modules)
 (flags
  (:standard -linkall))
 (libraries GT.ppx GT.syntax.map GT.syntax.show GT.syntax.fmt))

(executables
 (names test005_thrines test006_twines test007_quines)
 (public_names - - -)
 (modules test005_thrines test006_twines test007_quines)
 (libraries OCanren TimeHelper Quine_decls)
 (flags
  (:standard -rectypes -w -27-39))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   ;  ppx_fresh_hacky
   GTtogether)))

(executables
 (names test011_quinesNoDiseq)
 (public_names -)
 (modules test011_quinesNoDiseq)
 (libraries OCanren OCanren.tester TimeHelper Quines_NoDiseq)
 (flags
  (:standard -rectypes -w -27-39))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   ;  ppx_fresh_hacky
   GTtogether
   --
   -no-delay-in-fresh)))

(executables
 (names test009_lookupo test008_appendo)
 (public_names - -)
 (modules test009_lookupo test008_appendo)
 (libraries OCanren OCanren.tester TimeHelper)
 (flags
  (:standard
   -rectypes
   -w
   -27-39
   -dsource
   ;
   ))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   ;  ppx_fresh_hacky
   ppx_relation
   GTtogether
   --
   -no-delay-in-fresh)))

(rule
 (alias run_test001)
 (action
  (run %{exe:test001_expo1.exe})))

(rule
 (deps
  test001_expo1.exe
  test002_logo1.exe
  ;test003_sort.exe
  ;test004_logo2.exe
  test005_thrines.exe
  test006_twines.exe
  test007_quines.exe
  test008_appendo.exe
  test009_lookupo.exe
  test011_quinesNoDiseq.exe)
 (alias all_tests)
 (action
  (run echo)))
