(rule
 (targets pp5+gt+plugins+ocanren+dump.exe)
 (deps )
 (action
  (run mkcamlp5.opt
    -package
      camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump,GT-p5,GT.syntax.all,OCanren.syntax,logger.syntax
    -o %{targets})))

(rule
 (targets pp5+gt+plugins+ocanren+o.exe)
 (deps )
 (action
  (run mkcamlp5.opt
    -package
      camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_o,GT-p5,GT.syntax.all
    -package OCanren.syntax,logger.syntax
    -o %{targets})))
